REGRESSION(r143664, r143681): http/tests/security/feed-urls-from-remote.html fails https://bugs.webkit.org/show_bug.cgi?id=110554

Reviewed by Adam Barth.

Will fix http/tests/security/feed-urls-from-remote.html for Mac WK1.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::isLoading):


Canonical link: https://commits.webkit.org/128888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143753 268f45cc-cd09-0410-ab3c-d52691b4dbfc